I though this is better but I don't know if digitaltal think so

--- a/rule.html
+++ b/rule.html
@@ -122,7 +122,7 @@
           <h2 class="sub-title">第4条 宣伝行為</h2>
           <ol class="inside-list">
             <li>
-              当サーバー内の一部を除く全てのチャンネルで他のサーバーの宣伝行為を行うことを禁止します。<br />
+              当サーバー内の、特別に許可された一部のチャンネルを除き、全てのチャンネルで他のサーバーの宣伝行為を行うことを禁止します。<br />
               相手の同意なくDMで宣伝することも同様です。
             </li>
 
