--- a/faq.html
+++ b/faq.html
@@ -92,6 +92,7 @@
           </p>
         </li>
 
+        <!--
         <li>
           <h2 class="sub-title">
             Q.デジプレにフレンドを招待したいけどURLどこ？
@@ -101,27 +102,27 @@
             >の「招待URL」の部分にあります。
           </p>
         </li>
+        -->
 
         <li>
           <h2 class="sub-title">Q.もっと色んなジャンルの話がしたい！</h2>
           <p>
-            A.<span class="discord">#⚙｜役職設定</span
+            A.<span class="discord">#⚙｜ロール付与</span
             >から「フリーエリア」ロールを取得してください。
           </p>
         </li>
 
         <li>
-          <h2 class="sub-title">Q.中間管理職ってなに？</h2>
+          <h2 class="sub-title">Q.STAFFってなに？</h2>
           <p>A.キック、BAN権限等を与えられているメンバーです。</p>
         </li>
 
         <li>
           <h2 class="sub-title">
-            Q.どうやったら自分の発言量(経験値)が見れるの？
+            Q.どうやったら自分の発言量(経験値)が見られるの？
           </h2>
           <p>
-            A.<span class="discord">#🤖｜bot操作（ミュート推奨</span>で「ar!m
-            stats」と入力してください。
+            A.<span class="discord">#🤖｜bot操作（ミュート推奨</span>で「/top members server」と入力してください。
           </p>
         </li>
       </ul>
