--- a/rule.html
+++ b/rule.html
@@ -9,9 +9,9 @@
       name="description"
       content="Digitaltal Playground。通称デジプレ。シンプルで使いやすい雑談サーバーです。あなたの参加をお待ちしています。"
     />
-    <link rel="icon" href="/favicon.ico" type="image/vnd.microsoft.icon">
-    <link rel="icon" href="/favicon.ico" type="image/png">
-    <link rel="apple-touch-icon-precomposed" href="images/favicon.png">
+    <link rel="icon" href="/favicon.ico" type="image/vnd.microsoft.icon" />
+    <link rel="icon" href="/favicon.ico" type="image/png" />
+    <link rel="apple-touch-icon-precomposed" href="images/favicon.png" />
     
     <!-- OGP -->
     <meta
