Change: Addition of prohibited items

--- a/rule.html
+++ b/rule.html
@@ -93,6 +93,7 @@
           <ol class="inside-list">
             <li>攻撃的、または不快な言動</li>
             <li>スパム等の荒らし・迷惑行為</li>
+            <li>参加直後の一方的なDMやフレンド申請</li>
             <li>チャンネルの趣旨に沿わない内容の発言</li>
             <li>不快な名前、長すぎる名前</li>
             <li>運営側のミスの意図的な悪用</li>
