--- a/rule.html
+++ b/rule.html
@@ -66,7 +66,7 @@
     <div class="wrapper">
       <ul class="rule-content">
         <li>
-          <h2 class="sub-title">第1条 利用条件</h2>
+          <h2 class="sub-title" id="term01">第1条 利用条件</h2>
           <ol class="inside-list">
             <li>
               当サーバーを利用するには、必ず以下を理解し、同意しなければなりません。<br />
@@ -89,7 +89,7 @@
         </li>
 
         <li>
-          <h2 class="sub-title">第2条 禁止事項</h2>
+          <h2 class="sub-title" id="term02">第2条 禁止事項</h2>
           <ol class="inside-list">
             <li>攻撃的、または不快な言動</li>
             <li>スパム等の荒らし・迷惑行為</li>
@@ -103,7 +103,7 @@
         </li>
 
         <li>
-          <h2 class="sub-title">第3条 知的財産権</h2>
+          <h2 class="sub-title" id="term03">第3条 知的財産権</h2>
           <ol class="inside-list">
             <li>
               知的財産権の観点から、当サーバーのデザイン、アイディア、方針を後から他のサーバーで意図的に使用することを禁止します。<br />
@@ -120,7 +120,7 @@
         </li>
 
         <li>
-          <h2 class="sub-title">第4条 宣伝行為</h2>
+          <h2 class="sub-title" id="term04">第4条 宣伝行為</h2>
           <ol class="inside-list">
             <li>
               当サーバー内の、特別に許可された一部のチャンネルを除き、全てのチャンネルで他のサーバーの宣伝行為を行うことを禁止します。<br />
@@ -135,7 +135,7 @@
         </li>
 
         <li>
-          <h2 class="sub-title">第5条 処罰方法</h2>
+          <h2 class="sub-title" id="term05">第5条 処罰方法</h2>
           <ol class="inside-list">
             <li>
               上記の禁止事項などに違反した場合、運営は以下のいずれかの処罰をユーザーに与える場合があります。<br />
@@ -174,7 +174,7 @@
         </li>
 
         <li>
-          <h2 class="sub-title">第6条 免責事項</h2>
+          <h2 class="sub-title" id="term06">第6条 免責事項</h2>
           <ol class="inside-list">
             <li>
               運営は当サーバーにおいて、運営の判断で利用者の管理やチャットの管理、ログの管理等を行うことができます。
