Change: ogp url

--- a/faq.html
+++ b/faq.html
@@ -16,7 +16,7 @@
     <!-- OGP -->
     <meta
       property="og:url"
-      content="https://digitaltalplayground.github.io/faq.html"
+      content="https://dejipure.ga/faq.html"
     />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="デジプレ公式サイト｜FAQ" />
@@ -27,7 +27,7 @@
     <meta property="og:site_name" content="Digitaltal Playground" />
     <meta
       property="og:image"
-      content="https://digitaltalplayground.github.io/images/logo-img.png"
+      content="https://dejipure.ga/images/logo-img.png"
     />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@digitaltal_" />
