--- a/faq.html
+++ b/faq.html
@@ -108,7 +108,7 @@
           <h2 class="sub-title">Q.もっと色んなジャンルの話がしたい！</h2>
           <p>
             A.<span class="discord">#⚙｜ロール付与</span
-            >から「フリーエリア」ロールを取得してください。
+            >から興味のあるカテゴリに対応したロールを取得してください。
           </p>
         </li>
 
