Create: new website

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>デジプレ公式サイト｜よくある質問</title>
+    <title>デジプレ公式サイト｜サーバーについて</title>
     <meta
       name="description"
       content="Digitaltal Playground。通称デジプレ。シンプルで使いやすい雑談サーバーです。あなたの参加をお待ちしています。"
@@ -16,7 +16,7 @@
     <!-- OGP -->
     <meta property="og:url" content="https://dejipure.ga/about.html" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="デジプレ公式サイト｜よくある質問" />
+    <meta property="og:title" content="デジプレ公式サイト｜サーバーについて" />
     <meta
       property="og:description"
       content="Digitaltal Playground。通称デジプレ。シンプルで使いやすい雑談サーバーです。あなたの参加をお待ちしています。"
@@ -51,66 +51,55 @@
       </nav>
     </header>
 
-    <div id="faq">
+    <div id="about">
       <div class="banner">
         <div class="wrapper">
-          <p class="sub-title">よくある質問</p>
-          <h2 class="page-title">FAQ</h2>
+          <p class="sub-title">サーバーについて</p>
+          <h2 class="page-title">About</h2>
         </div>
       </div>
-      <div class="wrapper">
-        <ul class="faq-content">
-          <li class="faq-item">
-            <input id="acd-check01" class="acd-check" type="checkbox" />
-            <label class="acd-label" for="acd-check01">サーバーオーナーは誰？</label>
-            <div class="acd-content">
-              <p><span class="discord">でじたるたる#9009</span>です。</p>
-            </div>
-          </li>
-
-          <li class="faq-item">
-            <input id="acd-check02" class="acd-check" type="checkbox" />
-            <label class="acd-label" for="acd-check02">STAFFってなに？</label>
-            <div class="acd-content">
-              <p>キックやBANなどの権限を与えられているメンバーです。</p>
-            </div>
-          </li>
-
-          <li class="faq-item">
-            <input id="acd-check03" class="acd-check" type="checkbox" />
-            <label class="acd-label" for="acd-check03"
-              >自己紹介は絶対にしないとダメ？</label
-            >
-            <div class="acd-content">
-              <p>いいえ。任意です。</p>
-            </div>
-          </li>
-
-          <li class="faq-item">
-            <input id="acd-check04" class="acd-check" type="checkbox" />
-            <label class="acd-label" for="acd-check04"
-              >どうやったら名前に色が付きますか？</label
-            >
-            <div class="acd-content">
+      <div class="about-content">
+        <div id="about-column-01">
+          <div class="wrapper">
+            <div>
+              <h1 class="propaganda">
+                もっと自由に、<br /><span class="gradation-text">もっとシンプルに。</span>
+              </h1>
               <p>
-                たくさん発言することによって経験値が溜まってレベルアップします。特定のレベルに上がると色が付きます。
+                チャンネルが多すぎてどこで話せばいいのかわからない…<br />なんてことがないように、できるだけシンプルにデザインしました。
               </p>
             </div>
-          </li>
+            <img src="./images/hang_out.svg" alt="" />
+          </div>
+        </div>
 
-          <li class="faq-item">
-            <input id="acd-check05" class="acd-check" type="checkbox" />
-            <label class="acd-label" for="acd-check05"
-              >自分の発言量（経験値）はどうやったら確認できますか？</label
-            >
-            <div class="acd-content">
+        <div id="about-column-02">
+          <div class="wrapper">
+            <img src="./images/security.svg" alt="" />
+            <div>
+              <h1 class="propaganda">
+                安全な場所で、<br /><span class="gradation-text">安心して話そう。</span>
+              </h1>
               <p>
-                <span class="discord">#🤖｜bot操作（ミュート推奨</span>で「/top members
-                server」と入力してください。
+                認証やプロテクションが適切に設定されているので、<br />スパムアカウントに邪魔されることはほとんどありません。
               </p>
             </div>
-          </li>
-        </ul>
+          </div>
+        </div>
+
+        <div id="about-column-03">
+          <div class="wrapper">
+            <div>
+              <h1 class="propaganda">
+                みんなが仲間で、<br /><span class="gradation-text">みんながライバル。</span>
+              </h1>
+              <p>
+                発言量で名前の色が変わっていく、レベリング制度を採用。<br />もっと自分をアピールしよう！
+              </p>
+            </div>
+            <img src="./images/data.svg" alt="" />
+          </div>
+        </div>
       </div>
     </div>
 
