--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@
     <link rel="apple-touch-icon-precomposed" href="images/favicon.png" />
 
     <!-- OGP -->
-    <meta
-      property="og:url"
-      content="https://dejipure.ga"
-    />
+    <meta property="og:url" content="https://dejipure.ga" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="デジプレ公式サイト｜ホーム" />
     <meta
@@ -25,46 +22,49 @@
       content="Digitaltal Playground。通称デジプレ。シンプルで使いやすい雑談サーバーです。あなたの参加をお待ちしています。"
     />
     <meta property="og:site_name" content="Digitaltal Playground" />
-    <meta
-      property="og:image"
-      content="https://dejipure.ga/images/logo-img.png"
-    />
-    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="og:image" content="https://dejipure.ga/images/logo_ogp.png" />
+    <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@digitaltal_" />
 
     <!-- CSS -->
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap"
       rel="stylesheet"
     />
     <link href="css/style.css" rel="stylesheet" />
   </head>
 
   <body>
-    <div id="home" class="big-bg">
-      <header class="page-header wrapper">
-        <h1>
-          <a href="index.html"
-            ><img src="images/logo.svg" alt="デジプレロゴ" class="logo"
-          /></a>
-        </h1>
-        <nav>
-          <ul class="main-nav">
-            <li><a href="rule.html">利用規約</a></li>
-            <li><a href="guide.html">ガイド</a></li>
-            <li><a href="faq.html">FAQ</a></li>
-          </ul>
-        </nav>
-      </header>
+    <header class="page-header">
+      <a href="index.html"
+        ><img src="images/logo_icon.svg" alt="デジプレロゴ" class="logo"
+      /></a>
+      <nav>
+        <ul class="main-nav">
+          <li><a href="./about.html">サーバーについて</a></li>
+          <li><a href="./terms.html">利用規約</a></li>
+          <li><a href="./faq.html">よくある質問</a></li>
+        </ul>
+      </nav>
+    </header>
 
-      <div class="home-content wrapper">
-        <h2 class="page-title">No Chat No Life</h2>
-        <p>
-          好きな話題を好きなだけ。シンプルにデザインされた雑談サーバーであなたをお待ちしています。
-        </p>
-        <a href="https://discord.gg/KPCdE3r" class="button">始める</a>
+    <div id="home" class="big-bg">
+      <div class="wrapper">
+        <div class="home-content">
+          <h2 class="propaganda">なんでも語り合える、<br />シンプルな雑談サーバー。</h2>
+          <a href="https://discord.gg/KPCdE3r" class="button01">JOIN</a>
+          <a href="./about.html" class="button02">MORE</a>
+        </div>
       </div>
     </div>
+
+    <footer>
+      <div class="wrapper">
+        <p><small>&copy; 2023 Digitaltal</small></p>
+      </div>
+    </footer>
   </body>
 </html>
