Change: some fix

--- a/faq.html
+++ b/faq.html
@@ -49,6 +49,17 @@
           <li><a href="./faq.html">よくある質問</a></li>
         </ul>
       </nav>
+      <div class="hamburger-menu">
+        <input type="checkbox" id="menu-btn-check" />
+        <label for="menu-btn-check" class="menu-btn"><span></span></label>
+        <div class="menu-content">
+          <ul>
+            <li><a href="./about.html">サーバーについて</a></li>
+            <li><a href="./terms.html">利用規約</a></li>
+            <li><a href="./faq.html">よくある質問</a></li>
+          </ul>
+        </div>
+      </div>
     </header>
 
     <div id="faq">
@@ -62,7 +73,9 @@
         <ul class="faq-content">
           <li class="faq-item">
             <input id="acd-check01" class="acd-check" type="checkbox" />
-            <label class="acd-label" for="acd-check01">サーバーオーナーは誰？</label>
+            <label class="acd-label" for="acd-check01"
+              ><span class="acd-label-content">サーバーオーナーは誰？</span></label
+            >
             <div class="acd-content">
               <p><span class="discord">でじたるたる#9009</span>です。</p>
             </div>
@@ -70,7 +83,9 @@
 
           <li class="faq-item">
             <input id="acd-check02" class="acd-check" type="checkbox" />
-            <label class="acd-label" for="acd-check02">STAFFってなに？</label>
+            <label class="acd-label" for="acd-check02"
+              ><span class="acd-label-content">STAFFってなに？</span></label
+            >
             <div class="acd-content">
               <p>キックやBANなどの権限を与えられているメンバーです。</p>
             </div>
@@ -79,7 +94,9 @@
           <li class="faq-item">
             <input id="acd-check03" class="acd-check" type="checkbox" />
             <label class="acd-label" for="acd-check03"
-              >自己紹介は絶対にしないとダメ？</label
+              ><span class="acd-label-content"
+                >自己紹介は絶対にしないとダメ？</span
+              ></label
             >
             <div class="acd-content">
               <p>いいえ。任意です。</p>
@@ -89,7 +106,9 @@
           <li class="faq-item">
             <input id="acd-check04" class="acd-check" type="checkbox" />
             <label class="acd-label" for="acd-check04"
-              >どうやったら名前に色が付きますか？</label
+              ><span class="acd-label-content"
+                >どうやったら名前に色が付きますか？</span
+              ></label
             >
             <div class="acd-content">
               <p>
@@ -101,7 +120,9 @@
           <li class="faq-item">
             <input id="acd-check05" class="acd-check" type="checkbox" />
             <label class="acd-label" for="acd-check05"
-              >自分の発言量（経験値）はどうやったら確認できますか？</label
+              ><span class="acd-label-content"
+                >自分の発言量（経験値）はどうやったら確認できますか？</span
+              ></label
             >
             <div class="acd-content">
               <p>
