--- a/about.html
+++ b/about.html
@@ -49,6 +49,17 @@
           <li><a href="./faq.html">よくある質問</a></li>
         </ul>
       </nav>
+      <div class="hamburger-menu">
+        <input type="checkbox" id="menu-btn-check" />
+        <label for="menu-btn-check" class="menu-btn"><span></span></label>
+        <div class="menu-content">
+          <ul>
+            <li><a href="./about.html">サーバーについて</a></li>
+            <li><a href="./terms.html">利用規約</a></li>
+            <li><a href="./faq.html">よくある質問</a></li>
+          </ul>
+        </div>
+      </div>
     </header>
 
     <div id="about">
@@ -59,46 +70,40 @@
         </div>
       </div>
       <div class="about-content">
-        <div id="about-column-01">
-          <div class="wrapper">
-            <div>
-              <h1 class="propaganda">
-                もっと自由に、<br /><span class="gradation-text">もっとシンプルに。</span>
-              </h1>
-              <p>
-                チャンネルが多すぎてどこで話せばいいのかわからない…<br />なんてことがないように、できるだけシンプルにデザインしました。
-              </p>
-            </div>
-            <img src="./images/hang_out.svg" alt="" />
+        <div id="about-column-01" class="about-column">
+          <div>
+            <h1 class="propaganda">
+              もっと自由に、<br /><span class="gradation-text">もっとシンプルに。</span>
+            </h1>
+            <p>
+              チャンネルが多すぎてどこで話せばいいのかわからない…<br />なんてことがないように、できるだけシンプルにデザインしました。
+            </p>
           </div>
+          <img src="./images/hang_out.svg" alt="" />
         </div>
 
-        <div id="about-column-02">
-          <div class="wrapper">
-            <img src="./images/security.svg" alt="" />
-            <div>
-              <h1 class="propaganda">
-                安全な場所で、<br /><span class="gradation-text">安心して話そう。</span>
-              </h1>
-              <p>
-                認証やプロテクションが適切に設定されているので、<br />スパムアカウントに邪魔されることはほとんどありません。
-              </p>
-            </div>
+        <div id="about-column-02" class="about-column">
+          <div>
+            <h1 class="propaganda">
+              安全な場所で、<br /><span class="gradation-text">安心して話そう。</span>
+            </h1>
+            <p>
+              認証やプロテクションが適切に設定されているので、<br />スパムアカウントに邪魔されることはほとんどありません。
+            </p>
           </div>
+          <img src="./images/security.svg" alt="" />
         </div>
 
-        <div id="about-column-03">
-          <div class="wrapper">
-            <div>
-              <h1 class="propaganda">
-                みんなが仲間で、<br /><span class="gradation-text">みんながライバル。</span>
-              </h1>
-              <p>
-                発言量で名前の色が変わっていく、レベリング制度を採用。<br />もっと自分をアピールしよう！
-              </p>
-            </div>
-            <img src="./images/data.svg" alt="" />
+        <div id="about-column-03" class="about-column">
+          <div>
+            <h1 class="propaganda">
+              みんなが仲間で、<br /><span class="gradation-text">みんながライバル。</span>
+            </h1>
+            <p>
+              発言量で名前の色が変わっていく、レベリング制度を採用。<br />もっと自分をアピールしよう！
+            </p>
           </div>
+          <img src="./images/data.svg" alt="" />
         </div>
       </div>
     </div>
