--- a/index.html
+++ b/index.html
@@ -49,13 +49,24 @@
           <li><a href="./faq.html">よくある質問</a></li>
         </ul>
       </nav>
+      <div class="hamburger-menu">
+        <input type="checkbox" id="menu-btn-check" />
+        <label for="menu-btn-check" class="menu-btn"><span></span></label>
+        <div class="menu-content">
+          <ul>
+            <li><a href="./about.html">サーバーについて</a></li>
+            <li><a href="./terms.html">利用規約</a></li>
+            <li><a href="./faq.html">よくある質問</a></li>
+          </ul>
+        </div>
+      </div>
     </header>
 
     <div id="home" class="big-bg">
-      <div class="wrapper">
-        <div class="home-content">
-          <h2 class="propaganda">なんでも語り合える、<br />シンプルな雑談サーバー。</h2>
-          <a href="https://discord.gg/KPCdE3r" class="button01">JOIN</a>
+      <div class="home-content">
+        <h2 class="propaganda">なんでも語り合える、<br />シンプルな雑談サーバー。</h2>
+        <div id="home-button">
+          <a href="https://discord.com/invite/KPCdE3r" class="button01">JOIN</a>
           <a href="./about.html" class="button02">MORE</a>
         </div>
       </div>
