--- a/terms.html
+++ b/terms.html
@@ -49,6 +49,17 @@
           <li><a href="./faq.html">よくある質問</a></li>
         </ul>
       </nav>
+      <div class="hamburger-menu">
+        <input type="checkbox" id="menu-btn-check" />
+        <label for="menu-btn-check" class="menu-btn"><span></span></label>
+        <div class="menu-content">
+          <ul>
+            <li><a href="./about.html">サーバーについて</a></li>
+            <li><a href="./terms.html">利用規約</a></li>
+            <li><a href="./faq.html">よくある質問</a></li>
+          </ul>
+        </div>
+      </div>
     </header>
 
     <div id="terms">
