change: overall improvement

--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <title>デジプレ公式サイト｜ホーム</title>
     <meta
       name="description"
       content="Digitaltal Playground。通称デジプレ。シンプルで使いやすい雑談サーバーです。あなたの参加をお待ちしています。"
     />
     <link rel="icon" href="favicon.ico" type="image/vnd.microsoft.icon" />
-    <link rel="icon" href="favicon.ico" type="image/png" />
+    <link rel="icon" href="favicon.png" type="image/png" />
     <link rel="apple-touch-icon-precomposed" href="images/favicon.png" />
 
     <!-- OGP -->
-    <meta property="og:url" content="https://dejipure.ga" />
+    <meta property="og:url" content="https://dejipure.ga" />  
     <meta property="og:type" content="website" />
     <meta property="og:title" content="デジプレ公式サイト｜ホーム" />
     <meta
@@ -24,12 +26,10 @@
     <meta property="og:site_name" content="Digitaltal Playground" />
     <meta property="og:image" content="https://dejipure.ga/images/logo_ogp.png" />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="@digitaltal_" />
+    <meta name="twitter:creator" content="@digitaltal_" />
 
     <!-- CSS -->
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap"
       rel="stylesheet"
@@ -40,7 +40,7 @@
   <body>
     <header class="page-header">
       <a href="index.html"
-        ><img src="images/logo_icon.svg" alt="デジプレロゴ" class="logo"
+        ><img src="images/logo_icon.min.svg" alt="デジプレロゴ" class="logo"
       /></a>
       <nav>
         <ul class="main-nav">
