--- a/about.html
+++ b/about.html
@@ -54,6 +54,7 @@
         <label for="menu-btn-check" class="menu-btn"><span></span></label>
         <div class="menu-content">
           <ul>
+            <li><a href="./index.html">ホーム</a></li>
             <li><a href="./about.html">サーバーについて</a></li>
             <li><a href="./terms.html">利用規約</a></li>
             <li><a href="./faq.html">よくある質問</a></li>
@@ -69,8 +70,23 @@
           <h2 class="page-title">About</h2>
         </div>
       </div>
+
       <div class="about-content">
-        <div id="about-column-01" class="about-column">
+        <div class="about-column">
+          <div>
+            <h1 class="propaganda">
+              Digitaltal Playground<br /><span class="gradation-text"
+                >通称【デジプレ】。</span
+              >
+            </h1>
+            <p>
+              デジプレは2020年に誕生した雑談サーバーです。<br />楽しい遊び場を作りたかったんです。
+            </p>
+          </div>
+          <img src="./images/community.svg" alt="" />
+        </div>
+
+        <div class="about-column">
           <div>
             <h1 class="propaganda">
               もっと自由に、<br /><span class="gradation-text">もっとシンプルに。</span>
@@ -82,7 +98,7 @@
           <img src="./images/hang_out.svg" alt="" />
         </div>
 
-        <div id="about-column-02" class="about-column">
+        <div class="about-column">
           <div>
             <h1 class="propaganda">
               安全な場所で、<br /><span class="gradation-text">安心して話そう。</span>
@@ -94,7 +110,7 @@
           <img src="./images/security.svg" alt="" />
         </div>
 
-        <div id="about-column-03" class="about-column">
+        <div class="about-column">
           <div>
             <h1 class="propaganda">
               みんなが仲間で、<br /><span class="gradation-text">みんながライバル。</span>
