--- a/faq.html
+++ b/faq.html
@@ -54,6 +54,7 @@
         <label for="menu-btn-check" class="menu-btn"><span></span></label>
         <div class="menu-content">
           <ul>
+            <li><a href="./index.html">ホーム</a></li>
             <li><a href="./about.html">サーバーについて</a></li>
             <li><a href="./terms.html">利用規約</a></li>
             <li><a href="./faq.html">よくある質問</a></li>
