--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       rel="stylesheet"
     />
     <link href="css/style.css" rel="stylesheet" />
+    <script src="/scripts/navigation.js"></script>
   </head>
 
   <body>
