Update to brand new website
* Create: new website

* Change: some fix

* some change

* change: overall improvement (#5)

* change: hover anime

* fix: fix vertical align of hamburger menu (#6)

---------

Co-authored-by: うさみょん(myon2019)/mtripg6666tdr <56076195+mtripg6666tdr@users.noreply.github.com>

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <title>デジプレ公式サイト｜ホーム</title>
+    <title>デジプレ公式サイト｜サーバーについて</title>
     <meta
       name="description"
       content="Digitaltal Playground。通称デジプレ。シンプルで使いやすい雑談サーバーです。あなたの参加をお待ちしています。"
@@ -16,9 +16,9 @@
     <link rel="apple-touch-icon-precomposed" href="images/favicon.png" />
 
     <!-- OGP -->
-    <meta property="og:url" content="https://dejipure.ga" />  
+    <meta property="og:url" content="https://dejipure.ga/about.html" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="デジプレ公式サイト｜ホーム" />
+    <meta property="og:title" content="デジプレ公式サイト｜サーバーについて" />
     <meta
       property="og:description"
       content="Digitaltal Playground。通称デジプレ。シンプルで使いやすい雑談サーバーです。あなたの参加をお待ちしています。"
@@ -63,12 +63,63 @@
       </div>
     </header>
 
-    <div id="home" class="big-bg">
-      <div class="home-content">
-        <h2 class="propaganda">なんでも語り合える、<br />シンプルな雑談サーバー。</h2>
-        <div id="home-button">
-          <a href="https://discord.com/invite/KPCdE3r" class="button01">JOIN</a>
-          <a href="./about.html" class="button02">MORE</a>
+    <div id="about">
+      <div class="banner">
+        <div class="wrapper">
+          <p class="sub-title">サーバーについて</p>
+          <h2 class="page-title">About</h2>
+        </div>
+      </div>
+
+      <div class="about-content">
+        <div class="about-column">
+          <div>
+            <h1 class="propaganda">
+              Digitaltal Playground<br /><span class="gradation-text"
+                >通称【デジプレ】。</span
+              >
+            </h1>
+            <p>
+              デジプレは2020年に誕生した雑談サーバーです。<br />楽しい遊び場を作りたかったんです。
+            </p>
+          </div>
+          <img src="./images/community.svg" alt="" />
+        </div>
+
+        <div class="about-column">
+          <div>
+            <h1 class="propaganda">
+              もっと自由に、<br /><span class="gradation-text">もっとシンプルに。</span>
+            </h1>
+            <p>
+              チャンネルが多すぎてどこで話せばいいのかわからない…<br />なんてことがないように、できるだけシンプルにデザインしました。
+            </p>
+          </div>
+          <img src="./images/hang_out.svg" alt="" />
+        </div>
+
+        <div class="about-column">
+          <div>
+            <h1 class="propaganda">
+              安全な場所で、<br /><span class="gradation-text">安心して話そう。</span>
+            </h1>
+            <p>
+              認証やプロテクションが適切に設定されているので、<br />スパムアカウントに邪魔されることはほとんどありません。
+            </p>
+          </div>
+          <img src="./images/security.svg" alt="" />
+        </div>
+
+        <div class="about-column">
+          <div>
+            <h1 class="propaganda">
+              みんなが仲間で、<br /><span class="gradation-text">みんながライバル。</span>
+            </h1>
+            <p>
+              発言量で名前の色が変わっていく、レベリング制度を採用。<br />もっと自分をアピールしよう！
+            </p>
+          </div>
+          <img src="./images/data.svg" alt="" />
         </div>
       </div>
     </div>
