--- a/faq.html
+++ b/faq.html
@@ -16,7 +16,7 @@
     <link rel="apple-touch-icon-precomposed" href="images/favicon.png" />
 
     <!-- OGP -->
-    <meta property="og:url" content="https://dejipure.ga/about.html" />
+    <meta property="og:url" content="https://digitaltalplayground.github.io/about.html" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="デジプレ公式サイト｜よくある質問" />
     <meta
@@ -24,7 +24,7 @@
       content="Digitaltal Playground。通称デジプレ。シンプルで使いやすい雑談サーバーです。あなたの参加をお待ちしています。"
     />
     <meta property="og:site_name" content="Digitaltal Playground" />
-    <meta property="og:image" content="https://dejipure.ga/images/logo_ogp.png" />
+    <meta property="og:image" content="https://digitaltalplayground.github.io/images/logo_ogp.png" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:creator" content="@digitaltal_" />
 
