--- a/terms.html
+++ b/terms.html
@@ -16,7 +16,7 @@
     <link rel="apple-touch-icon-precomposed" href="images/favicon.png" />
 
     <!-- OGP -->
-    <meta property="og:url" content="https://digitaltalplayground.github.io/about.html" />
+    <meta property="og:url" content="https://digitaltalplayground.github.io/terms.html" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="デジプレ公式サイト｜利用規約" />
     <meta
