--- a/faq.html
+++ b/faq.html
@@ -78,7 +78,7 @@
               ><span class="acd-label-content">サーバーオーナーは誰？</span></label
             >
             <div class="acd-content">
-              <p><span class="discord">でじたるたる#9009</span>です。</p>
+              <p><span class="discord">でじたるたる</span>です。</p>
             </div>
           </li>
 
